# mod_vehicle_dynamics_control

./: .gitattributes  .gitignore  Mod_vehicle_dynamics_control.prj  Readme.md
.SimulinkProject/: Project.xml  ProjectData.type.Info.xml
.SimulinkProject/Root.type.Categories/: FileClassCategory.type.Category.xml
.SimulinkProject/Root.type.EntryPoints/: 49894120-0713-417c-aa83-4da975166bfa.type.EntryPoint.xml  76fd58f3-e443-4814-a1a3-151d037fa157.type.EntryPoint.xml  (+3 more)
control/: Readme.md
data/: Readme.md
docs/: Readme.md
estimation/: Readme.md
example_vehicle/: Readme.md
interfaces/: Readme.md  TUM_interfaces.sldd  modelconfig.sldd
main/: Readme.md
misc/: conversionfactors.sldd  convert_SimBus.sldd  convert_SimBus.slx  misc.slx
misc/ros2_wrapper/control/: CMakeLists.txt  package.xml
misc/ros2_wrapper/control/launch/: tum_tmpc_control.launch
misc/ros2_wrapper/control/src/: ControlHandler.cpp  ControlHandler.h  main.cpp  tum_rt_logger.cpp
misc/ros2_wrapper/raptor_emulation/: CMakeLists.txt  package.xml
misc/ros2_wrapper/raptor_emulation/launch/: raptor_emulator.launch.py
misc/ros2_wrapper/raptor_emulation/src/: RaptorEmulation.cpp  RaptorEmulation.h  main.cpp
network/: Readme.md
racelines/: IMS_GPS.csv  LO_GPS.csv  LVMS_GPS.csv  Modena.csv  Readme.md  raceline.sldd  raceline_example.csv
scripts/: CreateNewTrack.m  Readme.md  actuator_ident.slx  analyzeEmergencyStop.m  analyzeHardStop.m  analyzeLocalizationQuality.m  analyzeNormalOperation.m  analyzePathDeviationDetection.m  analyze_raptorstuff.m  benchmarkControllers.m  configureDD.m  configureVDCBuildModelConfig.m  configureVDCModule.m  createDebugModel.m  exportPredictionDataCSV.m  loadLTPLLogs.m  loadRaceline.m  loadScenario.m  loadScenarioDD.m  plotControllerComparison.m  plotDisturbanceComparison.m  plotLaptimeViolations.m  plotSteeringComparison.m  plotTireModel.m  plotTrajectories.m  plot_initVehPos.m  runAutomation.m  shutdown.m  shutdown_vdc.m  startup.m  startup_vdc.m
sensordrivers/: Readme.md
softwareEmulation/: Readme.md
system/: Readme.md
tracks/: Berlin2019.csv  Berlin2019.sldd  Modena.sldd  Monteblanco2019_track.csv  Monteblanco2019_track.sldd  Readme.md  ScenarioDefinition.sldd  Track_Creation_Example.csv
(+399 files in other folders)
