<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>tum_tmpc_control</name>
  <version>2.4.0</version>
  <description>Model predictive controller of the TUM Autonomous Motorsport team</description>
  <maintainer email="alexander.wischnewski@tum.de">Alexander Wischnewski</maintainer>
  <license>TBD</license>
  <author email="alexander.wischnewski@tum.de">Alexander Wischnewski</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tum_msgs</build_depend>
  <build_depend>novatel_oem7_msgs</build_depend>
  <build_depend>raptor_dbw_msgs</build_depend>
  <build_depend>deep_orange_msgs</build_depend>
  <build_depend>can_dbc_parser</build_depend>
  <build_depend>can_msgs</build_depend>


  <exec_depend>rclcpp</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
